--------------
Version 0.7.19
--------------
- Colors and warning improvements, enriched informations about AO's Notum War fields

--------------
Version 0.7.18
--------------
- Various fixes, addition of raidhistory, full archive of changelog

--------------
Version 0.7.17
--------------
- Many modules improved/added for both AO & AoC (& few more bot fixes in various core/modules)

--------------
Version 0.7.16
--------------
- Discord relay added + IRC improved ; several features added or improved for both games ; AO icons enriched

--------------
Version 0.7.15
--------------
- AO : addition of AoChatProxy compatibility to extend the bot friendlist over the 1000 limit
- AoC : new slave system linked to module AutoUserAdd to extend bot friendlist over 1K limit

--------------
Version 0.7.14
--------------
- AoC : correction related to the newly added !items functionnalities
- AO : ignoring system packets (AI 30 & SL 220) to reduce errors

--------------
Version 0.7.13
--------------
- AO/AoC : more tech patch for MySQL 8.x compatibility + addition of updated !items functionnalities for AOC

--------------
Version 0.7.12
--------------
- AO/AoC : technical patch allowing to use recent MySQL 8.x (with 5.x compatible auth) along with PHP 7.3 or 7.4

--------------
Version 0.7.11
--------------
- AO only : minor raid improvements patch + addition of the very latest high level "Subway" raid loots

-------------
Version 0.7.1
-------------
- AO/AoC: 2020 servers update, Mysqli full support for very latest SQL/Maria + PHP from v. 5.3 upto 7.2 successfull tested runnability
- AO: updated !raidloot interface v. 1.1 offering most usual upto endgame remains, including latest high level "Temple of 3 Winds" raid
      new !mloot command supporting external 3rd party (e.g. M. Fjeldstad AOIA) for quick loot add/roll, suggested by player Relo (RK5)